# tortor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.bat  build.rs  old_ratatui_dashboard.rs  test.rs
.github/workflows/: ci.yml
benches/: crypto_bench.rs  hash_bench.rs
examples/: dht_test.rs
src/: crypto_core.rs  crypto_dispatch.rs  crypto_simd.rs  gpu.rs  lib.rs  main.rs
src/core/: assembler.rs  bencode.rs  command.rs  coordinator.rs  disk.rs  disk_io.rs  disk_uring.rs  manager.rs  metadata_assembler.rs  mod.rs  peer_id.rs  resume.rs  session_store.rs  torrent.rs
src/crypto/: core.rs  dispatch.rs  gpu.rs  mod.rs  simd.rs  tls.rs
src/net/: handshake.rs  listener.rs  mod.rs  pex.rs  probe.rs  session.rs  shaper.rs  swarm.rs  tracker.rs  transport.rs  wire.rs
src/net/dht/: actor.rs  krpc.rs  mod.rs  routing.rs  search.rs  server.rs
src/ui/: dashboard.rs
