[package]
name = "tortor"
version = "0.1.0"
edition = "2021"
authors = ["Vitaliy Golik <GLK Dev>"]
description = "High-performance BitTorrent client with dynamic SIMD dispatch and zero-copy I/O"
repository = "https://github.com/GLK-Dev/tortor"
license = "MIT OR Apache-2.0"
keywords = ["bittorrent", "p2p", "simd", "io_uring", "networking"]
categories = ["network-programming", "command-line-utilities"]

[features]
default = []
gpu = []
gui = ["dep:eframe"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2"
serde_bytes = "0.11"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.30", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
url = "2.4"
eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hash_bench"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
